Editted CSS, buttons, and links

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Open+Sans&display=swap" rel="stylesheet">
     
-    <!-- Specify the font in css as shown below.
+    <!-- Specify the font in index.css as shown below.
 
-         font-family: 'Noto Sans JP', sans-serif;
+        font-family: 'Noto Sans JP', sans-serif;
     -->
 
     <title>Time Waiter</title>
