--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,7 @@
         font-family: 'Noto Sans JP', sans-serif;
     -->
 
-    <title>Time Waiter</title>
+    <title>Zerbez</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
